--- a/src/App.scss
+++ b/src/App.scss
@@ -7,10 +7,8 @@
 }
 .container{
   max-width: 1440px;
-  width: 100%;
-  height: 100%;
   margin: 0 auto;
-  //padding: 0 20px;
+  padding: 0 20px;
 }
 @import "Layout/Header/header";
 @import "Pages/Catalog/catalog";
