--- a/src/Pages/Catalog/catalog.scss
+++ b/src/Pages/Catalog/catalog.scss
@@ -1,8 +1,11 @@
 .catalog{
   flex: 0 1 50%;
-  padding: 120px 56px 20px 56px;
   background: #e9e9e3;
   text-align: start;
+  &__wrapper{
+    display: flex;
+    flex-direction: column;
+  }
   &__title{
     font-family: 'Inter',sans-serif;
     font-style: normal;
@@ -25,9 +28,8 @@
   &__btn{
     background: #e9e9e3;
     border: 2px solid #6F6F64;
-    width: 538px;
+    width: 100%;
     height: 58px;
-
     font-family: 'Inter',sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -46,7 +48,9 @@
 }
 @media (max-width: 1400px) {
   .catalog{
-    padding:70px 20px 20px 20px;
+    &__wrapper{
+      align-items: center;
+    }
     &__btn{
       width: 90%;
     }
@@ -54,9 +58,8 @@
 }
 @media (max-width: 992px) {
   .catalog{
-    padding:20px 20px 20px 20px;
     &__btn{
-      width: 100%;
+     width: 80%;
     }
     &__info{
       font-size: 18px;
