--- a/src/Pages/Menu/menu.scss
+++ b/src/Pages/Menu/menu.scss
@@ -1,16 +1,17 @@
 .menu{
-  min-height: 500px;
+  min-height: 740px;
   background: #E9E9E3;
-  padding-bottom: 50px;
+  padding: 120px 0 80px 0;
   &__wrapper{
     display: flex;
     justify-content: space-between;
+    gap: 40px;
   }
 }
 @media (max-width: 992px) {
   .menu{
-    flex: 0 1 50%;
-    padding: 70px 20px 20px 20px;
+    /* flex: 0 1 50%; */
+    padding: 60px 0 40px 0;
     &__wrapper{
       flex-direction: column;
     }
